fix overflow error

--- a/styles/mobileConfig.css
+++ b/styles/mobileConfig.css
@@ -170,7 +170,7 @@
         flex-direction: column;
         width: 100vw;
         height: 100vh;
-        padding: 80px 20px 40px 20px;
+        padding: 80px 20px 60px 20px;
         overflow: auto;
     }
 
